# game-net-core

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  assessment.md
api/: public_api_manifest.json
benchmarks/: CMakeLists.txt  performance_regression_budgets.json
benchmarks/core/: main.cpp
benchmarks/phase4/: main.cpp
examples/: CMakeLists.txt
examples/echo_client/: main.cpp
examples/echo_server/: main.cpp
examples/game_server_pipeline_demo/: GameServerPipeline.cc  GameServerPipeline.h  main.cpp
src/broadcast/: BroadcastDispatcher.cc  BroadcastMetricsRecorder.cc  BroadcastRouter.cc  CMakeLists.txt
src/core/: CMakeLists.txt
src/core/base/: Logger.cc
src/core/metrics/: MetricsExporter.cc  MetricsHookRecorder.cc
src/core/net/: Acceptor.cc  Buffer.cc  Channel.cc  Connector.cc  EventLoop.cc  EventLoopThread.cc  EventLoopThreadPool.cc  InetAddress.cc  Poller.cc  Socket.cc  TcpClient.cc  TcpConnection.cc  TcpServer.cc  TimerQueue.cc
src/game_logic/: CMakeLists.txt  GameCommandQueue.cc  LogicLoop.cc  LogicMetricsRecorder.cc
src/game_session/: CMakeLists.txt  PlayerSession.cc  SessionManager.cc
src/protocol/: CMakeLists.txt  PacketFramer.cc
src/transport/: CMakeLists.txt  TcpTransportEndpoint.cc
tests/: CMakeLists.txt
tests/api/: test_public_api_manifest.py
tests/ci/: test_core_benchmark_workflow.py  test_endurance_gate.py  test_long_soak_workflow.py  test_performance_regression.py  test_phase4_benchmark_workflow.py  test_workflow_jobs.py
tests/cmake/: test_core_benchmark_contract.py  test_event_loop_contracts.py  test_event_loop_thread_pool_contracts.py  test_install_package_contract.py  test_logger_thread_contract.py  test_migration_status_contract.py  test_msvc_utf8_contract.py  test_packet_framer_fuzz_contract.py  test_phase4_benchmark_contract.py  test_platform_backend_contract.py  test_release_safe_tests.py  test_sanitizer_flags.py  test_tcp_connection_context_contract.py  test_tcp_connection_thread_contract.py  test_tcp_lifecycle_contracts.py  test_threading_gate_contracts.py  test_timer_queue_contracts.py  test_windows_iocp_data_path_contract.py  test_windows_iocp_milestone_contract.py
tests/cmake/install_consumer/: CMakeLists.txt  main.cpp
tests/contract/acceptor/: test_acceptor_contract.cpp
tests/contract/base/: test_logger_contract.cpp  test_logger_thread_safety.cpp
tests/contract/broadcast/: test_broadcast_contract.cpp  test_broadcast_large_fanout.cpp  test_broadcast_rejection_contract.cpp
tests/contract/buffer/: test_buffer_contract.cpp
tests/contract/channel/: test_channel_contract.cpp
tests/contract/connector/: test_connector_contract.cpp  test_connector_retry_stop.cpp
tests/contract/event_loop/: test_event_loop.cpp
tests/contract/event_loop_thread/: test_event_loop_thread.cpp
tests/contract/event_loop_thread_pool/: test_event_loop_thread_pool.cpp  test_event_loop_thread_pool_restart_soak.cpp
tests/contract/game_logic/: test_logic_loop_concurrency.cpp  test_logic_loop_contract.cpp  test_logic_loop_lifecycle.cpp
tests/contract/game_session/: test_session_manager_contract.cpp  test_session_manager_lifecycle.cpp
tests/contract/metrics/: test_metrics_exporter_contract.cpp
tests/contract/net/: test_inet_address_contract.cpp
tests/contract/poller/: test_poller_contract.cpp
tests/contract/protocol/: test_packet_framer_budget.cpp  test_packet_framer_contract.cpp  test_packet_framer_fuzz_smoke.cpp  test_packet_framer_round_trip_smoke.cpp
tests/contract/socket/: test_socket_contract.cpp
tests/contract/tcp_client/: test_tcp_client_contract.cpp  test_tcp_client_cross_thread_connect.cpp  test_tcp_client_cross_thread_disconnect_active.cpp  test_tcp_client_cross_thread_retry_config.cpp  test_tcp_client_cross_thread_stop_pending_connect.cpp  test_tcp_client_destroy_active_connection.cpp  test_tcp_client_destroy_pending_connect.cpp  test_tcp_client_repeated_connect.cpp  test_tcp_client_repeated_disconnect.cpp  test_tcp_client_repeated_stop.cpp  test_tcp_client_retry_stop_race.cpp  test_tcp_client_retry_stop_soak.cpp  test_tcp_client_stop_active_connection_mixed_timing_soak.cpp  test_tcp_client_stop_pending_connect.cpp  test_tcp_client_stop_pending_connect_mixed_timing_soak.cpp  test_tcp_client_stop_pending_connect_soak.cpp
tests/contract/tcp_connection/: test_tcp_connection_cross_thread_force_close_pending_read.cpp  test_tcp_connection_cross_thread_force_close_pending_write.cpp  test_tcp_connection_cross_thread_force_close_soak.cpp  test_tcp_connection_cross_thread_send.cpp  test_tcp_connection_cross_thread_shutdown.cpp  test_tcp_connection_cross_thread_state.cpp  test_tcp_connection_force_close_pending_read.cpp  test_tcp_connection_force_close_pending_read_mixed_timing_soak.cpp  test_tcp_connection_force_close_pending_write_mixed_timing_soak.cpp  test_tcp_connection_force_close_pending_write_soak.cpp  test_tcp_connection_high_water_mark.cpp  test_tcp_connection_lifecycle.cpp  test_tcp_connection_peer_close.cpp  test_tcp_connection_peer_reset.cpp  test_tcp_connection_repeated_connect_destroyed.cpp  test_tcp_connection_repeated_force_close.cpp  test_tcp_connection_repeated_shutdown.cpp  test_tcp_connection_send_after_close.cpp  test_tcp_connection_shutdown_pending_output.cpp  test_tcp_connection_write_complete_ordering.cpp
tests/contract/tcp_server/: test_tcp_server_contract.cpp  test_tcp_server_repeated_stop.cpp  test_tcp_server_stop_active_connections.cpp  test_tcp_server_stop_active_write.cpp  test_tcp_server_stop_from_worker_callback_soak.cpp  test_tcp_server_stop_multi_worker.cpp  test_tcp_server_stop_soak.cpp  test_tcp_server_stop_worker_active_write_soak.cpp
tests/contract/timer_queue/: test_timer_queue.cpp
tests/fuzz/: CMakeLists.txt  generate_packet_framer_corpus.py  packet_framer.dict
tests/scope/: test_intent_consistency.py  test_intent_metadata.py  test_intent_semantics.py  test_scope_guard.py
tests/support/: ClientSocket.h  FutureTest.h  LoopTest.h  SocketPair.h  TcpClientStopHarness.h  TcpConnectionCallbacks.h  TcpConnectionHarness.h  TcpServerHarness.h  TestAssert.h  ThreadHandoff.h
(+210 files in other folders)
