function(add_gamenet_test layer module source)
    get_filename_component(test_name "${source}" NAME_WE)
    string(REPLACE "/" "_" module_id "${module}")
    set(target "${layer}_${module_id}_${test_name}")
    set(test_id "${layer}.${module}.${test_name}")
    set(test_labels ${layer} ${module} ${ARGN})

    add_executable(${target} ${source})
    target_link_libraries(${target} PRIVATE GameNet::core)
    add_test(NAME "${test_id}" COMMAND ${target})
    set_tests_properties("${test_id}" PROPERTIES LABELS "${test_labels}")
endfunction()

add_gamenet_test(unit channel ${CMAKE_CURRENT_SOURCE_DIR}/unit/channel/test_channel.cpp)
add_gamenet_test(unit buffer ${CMAKE_CURRENT_SOURCE_DIR}/unit/buffer/test_buffer.cpp)
add_gamenet_test(unit net ${CMAKE_CURRENT_SOURCE_DIR}/unit/net/test_inet_address.cpp)
add_gamenet_test(unit socket ${CMAKE_CURRENT_SOURCE_DIR}/unit/socket/test_socket.cpp)
add_gamenet_test(unit acceptor ${CMAKE_CURRENT_SOURCE_DIR}/unit/acceptor/test_acceptor_stop.cpp)
add_gamenet_test(unit connector ${CMAKE_CURRENT_SOURCE_DIR}/unit/connector/test_connector.cpp)
add_gamenet_test(contract event_loop ${CMAKE_CURRENT_SOURCE_DIR}/contract/event_loop/test_event_loop.cpp threading lifecycle)
add_gamenet_test(contract event_loop_thread ${CMAKE_CURRENT_SOURCE_DIR}/contract/event_loop_thread/test_event_loop_thread.cpp threading lifecycle)
add_gamenet_test(contract event_loop_thread_pool ${CMAKE_CURRENT_SOURCE_DIR}/contract/event_loop_thread_pool/test_event_loop_thread_pool.cpp threading lifecycle)
add_gamenet_test(contract timer_queue ${CMAKE_CURRENT_SOURCE_DIR}/contract/timer_queue/test_timer_queue.cpp)
add_gamenet_test(contract tcp_connection ${CMAKE_CURRENT_SOURCE_DIR}/contract/tcp_connection/test_tcp_connection_lifecycle.cpp lifecycle)
add_gamenet_test(integration tcp ${CMAKE_CURRENT_SOURCE_DIR}/integration/tcp/test_tcp_server_client_echo.cpp lifecycle)
