function(add_gamenet_test layer module source)
    get_filename_component(test_name "${source}" NAME_WE)
    string(REPLACE "/" "_" module_id "${module}")
    set(test_id "${layer}.${module}.${test_name}")
    string(SHA1 test_hash "${test_id}")
    string(SUBSTRING "${test_hash}" 0 10 test_hash_short)
    set(target "gnt_${layer}_${module_id}_${test_hash_short}")
    set(test_labels ${layer} ${module} ${ARGN})

    add_executable(${target} ${source})
    target_include_directories(${target} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
    target_link_libraries(${target} PRIVATE GameNet::core)
    add_test(NAME "${test_id}" COMMAND ${target})
    set_tests_properties("${test_id}" PROPERTIES LABELS "${test_labels}")
endfunction()

add_gamenet_test(unit channel ${CMAKE_CURRENT_SOURCE_DIR}/unit/channel/test_channel.cpp)
add_gamenet_test(unit base ${CMAKE_CURRENT_SOURCE_DIR}/unit/base/test_logger.cpp)
add_gamenet_test(unit buffer ${CMAKE_CURRENT_SOURCE_DIR}/unit/buffer/test_buffer.cpp)
add_gamenet_test(unit net ${CMAKE_CURRENT_SOURCE_DIR}/unit/net/test_inet_address.cpp)
add_gamenet_test(unit socket ${CMAKE_CURRENT_SOURCE_DIR}/unit/socket/test_socket.cpp)
add_gamenet_test(unit acceptor ${CMAKE_CURRENT_SOURCE_DIR}/unit/acceptor/test_acceptor_stop.cpp)
add_gamenet_test(unit connector ${CMAKE_CURRENT_SOURCE_DIR}/unit/connector/test_connector.cpp)
add_gamenet_test(contract acceptor ${CMAKE_CURRENT_SOURCE_DIR}/contract/acceptor/test_acceptor_contract.cpp threading lifecycle)
add_gamenet_test(contract base ${CMAKE_CURRENT_SOURCE_DIR}/contract/base/test_logger_contract.cpp)
add_gamenet_test(contract buffer ${CMAKE_CURRENT_SOURCE_DIR}/contract/buffer/test_buffer_contract.cpp)
add_gamenet_test(contract channel ${CMAKE_CURRENT_SOURCE_DIR}/contract/channel/test_channel_contract.cpp lifecycle)
add_gamenet_test(contract connector ${CMAKE_CURRENT_SOURCE_DIR}/contract/connector/test_connector_contract.cpp threading lifecycle)
add_gamenet_test(contract event_loop ${CMAKE_CURRENT_SOURCE_DIR}/contract/event_loop/test_event_loop.cpp threading lifecycle)
add_gamenet_test(contract event_loop_thread ${CMAKE_CURRENT_SOURCE_DIR}/contract/event_loop_thread/test_event_loop_thread.cpp threading lifecycle)
add_gamenet_test(contract event_loop_thread_pool ${CMAKE_CURRENT_SOURCE_DIR}/contract/event_loop_thread_pool/test_event_loop_thread_pool.cpp threading lifecycle)
add_gamenet_test(contract event_loop_thread_pool ${CMAKE_CURRENT_SOURCE_DIR}/contract/event_loop_thread_pool/test_event_loop_thread_pool_restart_soak.cpp threading lifecycle)
add_gamenet_test(contract net ${CMAKE_CURRENT_SOURCE_DIR}/contract/net/test_inet_address_contract.cpp)
add_gamenet_test(contract poller ${CMAKE_CURRENT_SOURCE_DIR}/contract/poller/test_poller_contract.cpp threading lifecycle)
add_gamenet_test(contract socket ${CMAKE_CURRENT_SOURCE_DIR}/contract/socket/test_socket_contract.cpp)
add_gamenet_test(contract tcp_client ${CMAKE_CURRENT_SOURCE_DIR}/contract/tcp_client/test_tcp_client_contract.cpp threading lifecycle)
add_gamenet_test(contract tcp_client ${CMAKE_CURRENT_SOURCE_DIR}/contract/tcp_client/test_tcp_client_retry_stop_race.cpp threading lifecycle)
add_gamenet_test(contract tcp_client ${CMAKE_CURRENT_SOURCE_DIR}/contract/tcp_client/test_tcp_client_retry_stop_soak.cpp threading lifecycle)
add_gamenet_test(contract tcp_client ${CMAKE_CURRENT_SOURCE_DIR}/contract/tcp_client/test_tcp_client_stop_pending_connect.cpp threading lifecycle)
add_gamenet_test(contract tcp_client ${CMAKE_CURRENT_SOURCE_DIR}/contract/tcp_client/test_tcp_client_stop_pending_connect_soak.cpp threading lifecycle)
add_gamenet_test(contract tcp_client ${CMAKE_CURRENT_SOURCE_DIR}/contract/tcp_client/test_tcp_client_cross_thread_stop_pending_connect.cpp threading lifecycle)
add_gamenet_test(contract tcp_client ${CMAKE_CURRENT_SOURCE_DIR}/contract/tcp_client/test_tcp_client_stop_pending_connect_mixed_timing_soak.cpp threading lifecycle)
add_gamenet_test(contract tcp_client ${CMAKE_CURRENT_SOURCE_DIR}/contract/tcp_client/test_tcp_client_destroy_pending_connect.cpp threading lifecycle)
add_gamenet_test(contract tcp_client ${CMAKE_CURRENT_SOURCE_DIR}/contract/tcp_client/test_tcp_client_destroy_active_connection.cpp threading lifecycle)
add_gamenet_test(contract tcp_client ${CMAKE_CURRENT_SOURCE_DIR}/contract/tcp_client/test_tcp_client_stop_active_connection_mixed_timing_soak.cpp threading lifecycle)
add_gamenet_test(contract tcp_client ${CMAKE_CURRENT_SOURCE_DIR}/contract/tcp_client/test_tcp_client_cross_thread_disconnect_active.cpp threading lifecycle)
add_gamenet_test(contract tcp_client ${CMAKE_CURRENT_SOURCE_DIR}/contract/tcp_client/test_tcp_client_cross_thread_connect.cpp threading lifecycle)
add_gamenet_test(contract tcp_server ${CMAKE_CURRENT_SOURCE_DIR}/contract/tcp_server/test_tcp_server_contract.cpp threading lifecycle)
add_gamenet_test(contract tcp_server ${CMAKE_CURRENT_SOURCE_DIR}/contract/tcp_server/test_tcp_server_stop_active_connections.cpp threading lifecycle)
add_gamenet_test(contract tcp_server ${CMAKE_CURRENT_SOURCE_DIR}/contract/tcp_server/test_tcp_server_stop_active_write.cpp threading lifecycle)
add_gamenet_test(contract tcp_server ${CMAKE_CURRENT_SOURCE_DIR}/contract/tcp_server/test_tcp_server_stop_multi_worker.cpp threading lifecycle)
add_gamenet_test(contract tcp_server ${CMAKE_CURRENT_SOURCE_DIR}/contract/tcp_server/test_tcp_server_stop_worker_active_write_soak.cpp threading lifecycle)
add_gamenet_test(contract tcp_server ${CMAKE_CURRENT_SOURCE_DIR}/contract/tcp_server/test_tcp_server_stop_from_worker_callback_soak.cpp threading lifecycle)
add_gamenet_test(contract tcp_server ${CMAKE_CURRENT_SOURCE_DIR}/contract/tcp_server/test_tcp_server_stop_soak.cpp threading lifecycle)
add_gamenet_test(contract timer_queue ${CMAKE_CURRENT_SOURCE_DIR}/contract/timer_queue/test_timer_queue.cpp threading lifecycle)
add_gamenet_test(contract tcp_connection ${CMAKE_CURRENT_SOURCE_DIR}/contract/tcp_connection/test_tcp_connection_lifecycle.cpp lifecycle)
add_gamenet_test(contract tcp_connection ${CMAKE_CURRENT_SOURCE_DIR}/contract/tcp_connection/test_tcp_connection_high_water_mark.cpp lifecycle)
add_gamenet_test(contract tcp_connection ${CMAKE_CURRENT_SOURCE_DIR}/contract/tcp_connection/test_tcp_connection_peer_close.cpp lifecycle)
add_gamenet_test(contract tcp_connection ${CMAKE_CURRENT_SOURCE_DIR}/contract/tcp_connection/test_tcp_connection_peer_reset.cpp lifecycle)
add_gamenet_test(contract tcp_connection ${CMAKE_CURRENT_SOURCE_DIR}/contract/tcp_connection/test_tcp_connection_repeated_force_close.cpp lifecycle)
add_gamenet_test(contract tcp_connection ${CMAKE_CURRENT_SOURCE_DIR}/contract/tcp_connection/test_tcp_connection_cross_thread_send.cpp threading lifecycle)
add_gamenet_test(contract tcp_connection ${CMAKE_CURRENT_SOURCE_DIR}/contract/tcp_connection/test_tcp_connection_cross_thread_force_close_soak.cpp threading lifecycle)
add_gamenet_test(contract tcp_connection ${CMAKE_CURRENT_SOURCE_DIR}/contract/tcp_connection/test_tcp_connection_cross_thread_force_close_pending_write.cpp threading lifecycle)
add_gamenet_test(contract tcp_connection ${CMAKE_CURRENT_SOURCE_DIR}/contract/tcp_connection/test_tcp_connection_cross_thread_shutdown.cpp threading lifecycle)
add_gamenet_test(contract tcp_connection ${CMAKE_CURRENT_SOURCE_DIR}/contract/tcp_connection/test_tcp_connection_force_close_pending_read.cpp threading lifecycle)
add_gamenet_test(contract tcp_connection ${CMAKE_CURRENT_SOURCE_DIR}/contract/tcp_connection/test_tcp_connection_cross_thread_force_close_pending_read.cpp threading lifecycle)
add_gamenet_test(contract tcp_connection ${CMAKE_CURRENT_SOURCE_DIR}/contract/tcp_connection/test_tcp_connection_force_close_pending_read_mixed_timing_soak.cpp threading lifecycle)
add_gamenet_test(contract tcp_connection ${CMAKE_CURRENT_SOURCE_DIR}/contract/tcp_connection/test_tcp_connection_force_close_pending_write_soak.cpp threading lifecycle)
add_gamenet_test(contract tcp_connection ${CMAKE_CURRENT_SOURCE_DIR}/contract/tcp_connection/test_tcp_connection_force_close_pending_write_mixed_timing_soak.cpp threading lifecycle)
add_gamenet_test(contract tcp_connection ${CMAKE_CURRENT_SOURCE_DIR}/contract/tcp_connection/test_tcp_connection_shutdown_pending_output.cpp lifecycle)
add_gamenet_test(contract tcp_connection ${CMAKE_CURRENT_SOURCE_DIR}/contract/tcp_connection/test_tcp_connection_write_complete_ordering.cpp lifecycle)
add_gamenet_test(integration tcp ${CMAKE_CURRENT_SOURCE_DIR}/integration/tcp/test_tcp_server_client_echo.cpp lifecycle)
